force-app/main/default/objects/child__c/child__c.object-meta.xml
<CustomObject>
    <label>child</label>
    <nameField>
        <label>child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>child</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>