force-app/main/default/objects/child__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <length>12</length>
    <type>Text</type>
</CustomField>