force-app/main/default/objects/child__c/fields/Boolean__c.field-meta.xml
<CustomField>
    <fullName>Boolean__c</fullName>
    <formula>IF($User.Id== CreatedById ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boolean</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>