force-app/main/default/objects/child__c/fields/parents__c.field-meta.xml
<CustomField>
    <fullName>parents__c</fullName>
    <label>parent</label>
    <referenceTo>parent__c</referenceTo>
    <relationshipLabel>child</relationshipLabel>
    <relationshipName>child</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>